# practica3_mh

./: Bupa_15.csv  Bupa_30.csv  CMakeLists.txt  Glass_15.csv  Glass_30.csv  Zoo_15.csv  Zoo_30.csv  boxplot.py  main.cpp
Peñaherrera Diaz Alejandra/software/: README.md
Peñaherrera Diaz Alejandra/software/inc/: localsearch.h  ppar.h
Peñaherrera Diaz Alejandra/software/src/: genetic_agg.cpp  randomsearch.cpp
common/: mhtrayectory.h
inc/: bmb.h  genetic.h  ils.h  ils_es.h  localsearch.h  memetic.h  simulated_annealing.h
software/inc/: genetic.h  greedy_copkm.h  randomsearch.h
software/src/: genetic_age.cpp  memetic.cpp
src/: bmb.cpp  genetic_age.cpp  genetic_agg.cpp  greedy_copkm.cpp  ils.cpp  ils_es.cpp  localsearch.cpp  memetic.cpp  simulated_annealing.cpp
